--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Droid.Photo</string>
+    <string name="title_image_display">Display Image</string>
     <string name="btn_search">Search</string>
     <string name="hint_search_box">Enter Search Term</string>
 </resources>
